# idle-activity-generator

./: Cargo.toml  LICENSE  README.md  build.rs  distro-build.bat
.github/workflows/: rust.yml
src/: main.rs
