[package]
name = "activity_maker_windows"
version = "0.1.0"
authors = ["Puspendu Banerjee <Puspendu.Banerjee@gmail.com>"]
edition = "2018"
build = "build.rs"

[package.metadata.winres]
OriginalFilename = "activity_maker_windows.exe"
LegalCopyright = "Copyright © 2020"


[target.'cfg(windows)'.build-dependencies]
winres = "^0.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }
#
[dependencies]
#winapi = "^0.3.9"
#user32-sys = "^0.2.0"
#kernel32-sys = "^0.2.2"
user-idle ="^0.1.1"
systray = "^0.4.0"
enigo = "^0.0.14"